# skrubber_aws_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  dynamodb_queues.py  lambda_app.py  loggers.py  main.py  models.py  s3_connect.py  schemas.py
