[tool.poetry]
name = "aws_demo"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4.32"
python-dotenv = "^0.19.2"
boto3 = "^1.21.17"
redis-py-cluster = "^2.1.3"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
